accion al clickear un item - con objeto de negocio

--- a/app/src/main/res/layout/activity_info_anios.xml
+++ b/app/src/main/res/layout/activity_info_anios.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable name="controller" type="ar.edu.unq.cpi.geographydata.InfoAniosController"/>
+        <variable name="controller" type="ar.edu.unq.cpi.geographydata.view.InfoAniosController"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".InfoAnios">
+        tools:context=".view.InfoAnios">
 
         <ListView
             android:id="@+id/listaAnios"
