primer prueba con imagen andando

--- a/app/src/main/res/layout/activity_menu_inicial.xml
+++ b/app/src/main/res/layout/activity_menu_inicial.xml
@@ -37,5 +37,18 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/unItemPorFila" />
 
+        <Button
+            android:id="@+id/imagenMasTextos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> controller.imagenMasTextos()}"
+            android:text="@string/imagenMasTextos"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/dosTextosPorFila" />
+
     </android.support.constraint.ConstraintLayout>
 </layout>
